@@ -1,4 +1,4 @@
 name = witches
 descriptions = adds witches and their cottages
 depends = default, mobs
-optional_depends = protection
+optional_depends = protector
